--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>mi proyecto</title>
+   
 </head>
-<body>
+<body> 
+    <p>Maria Auxiliadora</p>
+    <style>
+    *{
+    font-family: arial, sans-serif;
+    text-align: center;
+    background-color:aqua
+
+
+}
+h1{
+    color:rgb(8, 8, 224);
+    color:brown;
+
+}
+</style>
+
     <ul>
         <li>
             <a href="ejercicio.html">Ejercicio 1</a>
@@ -45,5 +62,8 @@
          <li>
             <a href="tarea3.html"> ejercicio 11</a>
         </li>
+
+        
+        <p>Jeydi Perez</p>
 </body>
 </html>
